--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,5 +26,6 @@ jobs:
           npm ci
           npm run build --if-present
           npm run lint
+          npm run test
         env:
           CI: true
