--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
           npm ci
           npm run build --if-present
           npm run lint
+          npm run test
         env:
           CI: true
 
