--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "yargs": "^17.6.2"
   }
 }
