--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "prepublishOnly": "npm run build",
     "test": "jest --verbose",
     "test:watch": "jest --verbose --watch",
-    "test:cli": "npm run build && node lib/cli/index.js --css \"test/**/*.css\"",
-    "test:cli-sass": "npm run build && node lib/cli/index.js --css \"test/**/*.scss\"",
+    "test:cli": "npm run build && node lib/cli/index.js --css \"test/**/*.{css,scss}\"",
+    "test:cli-css": "npm run build && node lib/cli/index.js --css \"test/**/*.css\"",
+    "test:cli-scss": "npm run build && node lib/cli/index.js --css \"test/**/*.scss\"",
     "coverage": "jest --coverage",
     "lint": "NODE_ENV=test npm-run-all --parallel lint:*",
     "lint:js": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
