--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@phntms/css-components",
+  "name": "@phantomstudios/css-components",
   "description": "At its core, css-components is a simple wrapper around standard CSS. It allows you to write your CSS how you wish then compose them into a component ready to be used in React.",
   "version": "0.4.0",
   "main": "lib/index.js",
