--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@eslint/js": "^9.28.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.25",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.23",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.28.0",
@@ -67,15 +68,14 @@
     "jiti": "^2.4.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "glob": "^8.0.3",
-    "glob-promise": "^6.0.2",
+    "glob": "^11.0.2",
     "sass": "^1.62.0",
-    "yargs": "^17.6.2"
+    "yargs": "^18.0.0"
   }
 }
